Add initial project files

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,20 +1,14 @@
 {
-  "extends": "eslint-config-airbnb",
+  "extends": "tribou",
   "rules": {
-    "indent": [2, 2, {"SwitchCase": 1}],
-    "no-console": [0],
-    "func-names": [0],
-    "semi": [2, "never"],
-    "no-extra-semi": [2],
-    "space-before-function-paren": [2, "always"],
-    "no-else-return": [0],
-    "space-infix-ops": [0],
-    "react/prefer-es6-class": [0],
-    "react/prefer-stateless-function": [0],
-    "import/no-unresolved": [0],
-    "global-require": [0],
+    "no-console": ["off"],
+    "import/no-unresolved": ["off"],
+    "global-require": ["off"],
+    "jsx-quotes": ["error", "prefer-single"],
+    "react/prefer-es6-class": ["off"],
+    "react/prefer-stateless-function": ["off"]
   },
   "globals": {
-    "__PREFIX_LINKS__": true,
-  },
+    "__PREFIX_LINKS__": true
+  }
 }
