--- a/package.json
+++ b/package.json
@@ -1,51 +1,65 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
-  "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "name": "gatsby-starter-hapi",
+  "description": "Gatsby starter for Hapi on Heroku",
+  "private": true,
+  "version": "0.0.1",
+  "author": "Aaron Tribou <aaron.tribou@gmail.com>",
   "dependencies": {
     "babel-plugin-add-module-exports": "^0.2.0",
+    "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
+    "boom": "^3.2.1",
+    "classnames": "^2.2.5",
     "front-matter": "^2.0.7",
     "gatsby": "^0.12.0",
+    "good": "^7.0.1",
+    "good-console": "^6.1.2",
+    "good-squeeze": "^4.0.0",
+    "hapi": "^13.4.1",
     "highlight.js": "^9.3.0",
     "history": "^2.0.2",
+    "inert": "^4.0.0",
+    "jquery": "^3.1.0",
     "js-yaml": "^3.6.0",
-    "markdown-it": "^7.0.0",
-    "markdown-it-abbr": "^1.0.3",
-    "markdown-it-attrs": "^0.6.0",
-    "markdown-it-deflist": "^2.0.1",
-    "markdown-it-footnote": "^3.0.0",
-    "markdown-it-sub": "^1.0.0",
+    "normalize.css": "^4.1.1",
     "object-assign": "^4.1.0",
     "react": "^15.3.0",
     "react-document-title": "^2.0.1",
     "react-dom": "^15.3.0",
-    "react-headroom": "^2.1.2",
-    "react-responsive-grid": "^0.3.3",
     "react-router": "^2.6.1",
-    "toml-js": "0.0.8",
-    "typography": "^0.11.11",
-    "typography-react": "^0.10.4"
+    "toml-js": "0.0.8"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.6",
     "babel-core": "^6.9.1",
+    "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-preset-react-hmre": "^1.1.1",
+    "compression-webpack-plugin": "^0.3.1",
     "css-loader": "^0.23.1",
-    "eslint": "^2.11.1",
+    "dotenv": "^2.0.0",
+    "eslint": "^2.12.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.12.0",
     "eslint-plugin-jsx-a11y": "1.5.3",
+    "eslint-config-standard": "^5.3.1",
+    "eslint-config-tribou": "^1.7.1",
+    "eslint-plugin-flow-vars": "^0.4.0",
+    "eslint-plugin-promise": "^1.3.2",
     "eslint-plugin-react": "^5.1.1",
-    "gh-pages": "^0.11.0",
+    "eslint-plugin-standard": "^1.3.2",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "null-loader": "^0.1.1",
+    "postcss-calc": "^5.3.0",
     "postcss-loader": "^0.9.1",
+    "precss": "^1.4.0",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.10",
+    "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1"
   },
@@ -53,12 +67,21 @@
     "gatsby"
   ],
   "license": "MIT",
-  "main": "n/a",
+  "main": "server.js",
+  "engines": {
+    "node": ">=4.4.7 <5",
+    "npm": ">=3.10.5 <4"
+  },
   "scripts": {
-    "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public .",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "develop": "gatsby develop",
-    "build": "gatsby build",
-    "deploy": "gatsby build --prefix-links && gh-pages -d public"
+    "dev": "gatsby develop",
+    "build": "rimraf public && gatsby build",
+    "deploy-prod": "heroku pipelines:promote -a gatsby-starter-hapi",
+    "lss": "heroku releases -a gatsby-starter-hapi-staging",
+    "lsp": "heroku releases -a gatsby-starter-hapi",
+    "preversion": "rimraf public && gatsby build && git add public",
+    "serve": "npm run build && gatsby serve-build",
+    "start": "node server.js",
+    "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
